<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePause1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePause2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePause3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePause4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/game_paused"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePause1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/buttonResume"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/resume"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePause2"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePause4"
        app:layout_constraintStart_toEndOf="@+id/guidelinePause3"
        app:layout_constraintTop_toBottomOf="@+id/guidelinePause1" />

    <Button
        android:id="@+id/buttonExit"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePause4"
        app:layout_constraintStart_toEndOf="@+id/guidelinePause3"
        app:layout_constraintTop_toBottomOf="@+id/guidelinePause2" />

</androidx.constraintlayout.widget.ConstraintLayout>